CHANGELOG RoundCube Webmail
---------------------------

2007/12/10 (estadtherr)
----------
- Upgrade to TinyMCE 2.1.3

2007/12/10 (thomasb)
----------
- Delegate user-stuff to new class rcube_user
- Implement Message-Disposition-Notification (Receipts)

2007/12/05 (tomekp)
----------
- update bg, uk localization

2007/12/04 (tomekp)
----------
- update bg localization

2007/11/25 (thomasb)
----------
- Applied UID fetch patch by Glen Ogilvie
- Applied patch for correct Postgres instructions from ticket #1484674
- Fix overriding of session vars when register_globals is on (#1484670)
- Fix wrong Postgres setup instructions in INSTALL (#1484674)
- Fix bug with case-sensitive folder names (#1484245)
- Don't create default folders by default
- Added Georgian localization by Zaza Zviadadze
- Updated Russian localization
- Fixed some potential security risks (audited by Andris)
- Only show new messages if they match the current search (#1484176)

2007/11/20 (tomekp)
----------
- add Korean (kr) localization

2007/11/14 (tomekp)
----------
- update id_ID localization

2007/11/06 (thomasb)
----------
- Switch to/from when searcing in Sent folder (#1484555)
- Correctly read the References header (#1484646)
- Unset old cookie in before sending a new value (#1484639)
- Correctly decode attachments when downloading them (#1484645 and #1484642)

2007/10/22 (tomekp)
----------
- update ru, eo localizations

2007/10/17 (thomasb)
----------
- Make message listing less error prone

2007/10/10 (thomasb)
----------
- Suppress IE errors when clearing attachments form (#1484356)
- Set preferences field in user table to NULL (#1484386)
- Log error when login fails due to auto_create_user turned off
- Update UPGRADING instructions

2007/10/05 (tomekp)
----------
- Add Esperanto localization

2007/10/04 (Stiwi)
----------
- Updated German localization

2007/10/04 (yllar)
----------
- Added Malay localization
- Updated Lithuanian localization

2007/09/27 (tomekp)
----------